# Lloom

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
config/: data_config.yaml  eval_config.yaml  sft_config.yaml  tokenizer_config.yaml  training_config.yaml
config/pipelines/: pretrain.yaml  release.yaml  sft.yaml
config/presets/: base.yaml  large.yaml  moe.yaml  nano.yaml  small.yaml  xl.yaml
data/raw/: sample.txt
data/sft/: sample.jsonl
docs/: ARCHITECTURE.md
lloom/: __init__.py  config.py  pipeline.py  preflight.py  utils.py
lloom/data/: __init__.py  sft.py  streams.py
lloom/eval/: __init__.py  clustering.py  embed.py  evaluator.py  perplexity.py  retrieval.py
lloom/finetune/: __init__.py  lora.py
lloom/infer/: __init__.py  checkpoint.py  generate.py  server.py
lloom/model/: __init__.py  attention.py  config.py  layers.py  moe.py  rope.py  transformer.py
lloom/quant/: __init__.py  quantize.py
lloom/tokenizer/: __init__.py  spm.py
lloom/train/: __init__.py  objectives.py  optim.py  schedules.py  sft_trainer.py  trainer.py
scripts/: evaluate.py  finetune_sft_full.py  finetune_sft_lora.py  plot_loss.py  preflight.py  prepare_data.py  pretrain.py  quantize.py  run_pipeline.py  serve.py  tokenize_dataset.py  train_tokenizer.py
tests/: test_lloom.py  test_scripts_smoke.py
textlm/: __init__.py  prep.py  sft.py
