[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lloom"
version = "0.1.0"
description = "Config-driven, project-agnostic LLM training framework in pure PyTorch."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Devon" }]
keywords = ["llm", "pytorch", "transformer", "training", "lora", "moe", "framework"]
dependencies = [
    "torch>=2.5.0",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "sentencepiece>=0.2.0",
    "safetensors>=0.4",
    "tqdm>=4.66",
]

[project.optional-dependencies]
serve = ["fastapi>=0.110", "uvicorn>=0.29"]
train = ["wandb>=0.17"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["lloom*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
