[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "lloom"
dynamic = ["version"]
description = "Config-driven, project-agnostic LLM training framework in pure PyTorch."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Devon Juvinall" }]
keywords = ["llm", "pytorch", "transformer", "training", "lora", "moe", "framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.5.0",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "sentencepiece>=0.2.0",
    "safetensors>=0.4",
    "tqdm>=4.66",
]

[project.urls]
Homepage = "https://github.com/djuvinall/Lloom"
Repository = "https://github.com/djuvinall/Lloom"
Issues = "https://github.com/djuvinall/Lloom/issues"

[project.optional-dependencies]
serve = ["fastapi>=0.110", "uvicorn>=0.29"]
train = ["wandb>=0.17"]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.setuptools.dynamic]
version = { attr = "lloom.__version__" }

[tool.setuptools.packages.find]
include = ["lloom*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# F pyflakes (real bugs) + E/W pycodestyle. Stylistic checks that clash with the
# project's deliberate style are disabled: E402 (scripts set sys.path before their
# imports), E702 (intentional one-line statements), E741, E501 (line length).
# Import ordering (I) is left to the author, not gated in CI.
select = ["E", "F", "W"]
ignore = ["E501", "E402", "E702", "E741"]
